Add tests and docs
